overlays/development/apigateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkfolio
  annotations: # 아래 내용 추가 권장
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "chat-service" # 웹소켓 서비스 명시
spec:
  ingressClassName: nginx
  rules:
  - host: "linkfolio.127.0.0.1.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apigateway-service
            port:
              number: 80

  - host: "impressionless-connaturally-jonie.ngrok-free.dev"
    http:
      paths:
      - path: / # 모든 경로를 apigateway로 보냄
        pathType: Prefix
        backend:
          service:
            name: apigateway-service # 동일한 API Gateway 서비스로 라우팅
            port:
              number: 80
